CRUD TOTALMENTE FUNCIONAL EN CLASES